fix(classification-marking): solves GSB collapsing bug

--- a/src/components/rux-classification-marking/rux-classification-marking.scss
+++ b/src/components/rux-classification-marking/rux-classification-marking.scss
@@ -88,3 +88,7 @@
 :host([classification='unclassified']) div {
     background-color: var(--color-classification-unclassified);
 }
+
+::slotted(rux-global-status-bar) {
+    top: 26px;
+}
